--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
 }
 
 .jogo {
-    background-color: #f1ebeb;
+    background-color: #f5f1f1;
     margin: 60px auto;
     width: 606px;
     border: solid 3px rgb(22, 189, 189);
@@ -33,8 +33,8 @@ header {
     float: left;
     width: 200px;
     height: 100%;
-    border-right: solid 2px rgb(22, 189, 189);
-    color: rgb(22, 189, 189);
+    border-right: solid 2px rgb(46, 75, 75);
+    cursor: pointer;
 }
 
 .escolha {
@@ -56,6 +56,31 @@ header {
     font-size: 32px;
 }
 
-.sumir {
+.vez-de-jogar {
+    font-size: 32px;
+    margin-top: 40px;
+    text-align: center;
+}
+
+.placar {
     display: none;
+    justify-content: center;
+    font-size: 26px;
+    border: 3px solid rgb(226, 223, 223);
+    max-width: 500px;
+    margin: 60px auto;
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 15px;
+    align-items: center;
+    background-color: rgb(22, 189, 189);
+}
+
+.placar p {
+    margin: 0px 20px;
+}
+
+#vitoria-usuario, #vitoria-computador {
+    font-weight: bold;
+    font-style: 3rem;
 }
