--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* GERAL */
+
 * {
     padding: 0px;
     margin: 0px;
@@ -7,19 +9,15 @@
 header {
     background-color: aliceblue;
     text-align: center;
-    padding: 10px 0px;
+    padding: 20px 0px;
 }
+
+/* JOGO */
 
 .jogo {
-    background-color: #f5f1f1;
     margin: 60px auto;
-    width: 606px;
-    border: solid 3px rgb(22, 189, 189);
-}
-
-.items {
-    border-bottom: solid 2px rgb(22, 189, 189);
-    height: 200px;
+    max-width: 606px;
+    padding: 0px 20px;
 }
 
 .items {
@@ -27,15 +25,26 @@ header {
     text-align: center;
     display: flex;
     justify-content: center;
+    height: 200px;
+}
+
+.items:nth-child(1), .items:nth-child(2) {
+    border-bottom: solid 2px rgb(22, 189, 189);
 }
 
 .quadrado {
     float: left;
     width: 200px;
     height: 100%;
-    border-right: solid 2px rgb(46, 75, 75);
     cursor: pointer;
+    background-color: #f8f6f6;
 }
+
+.quadrado:nth-child(1), .quadrado:nth-child(2) {
+    border-right: solid 2px rgb(22, 189, 189);
+}
+
+/* ESCOLHA DO SIMBOLO */
 
 .escolha {
     text-align: center;
@@ -48,7 +57,7 @@ header {
 
 .simbolo {
     background-color: rgb(22, 189, 189);
-    padding: 15px 30px;
+    padding: 10px 25px;
     border-radius: 10px;
     margin: 0px 20px;
     color: #fff;
@@ -56,31 +65,89 @@ header {
     font-size: 32px;
 }
 
+/* VEZ DO JOGADOR */
+
 .vez-de-jogar {
-    font-size: 32px;
+    font-size: 24px;
     margin-top: 40px;
     text-align: center;
 }
+
+/* PLACAR */
 
 .placar {
     display: none;
     justify-content: center;
     font-size: 26px;
-    border: 3px solid rgb(226, 223, 223);
-    max-width: 500px;
+    border: 1px solid rgb(226, 223, 223);
+    max-width: 600px;
     margin: 60px auto;
     color: #fff;
     margin-bottom: 40px;
-    padding: 15px;
+    padding: 5px;
     align-items: center;
     background-color: rgb(22, 189, 189);
+    border-radius: 10px;
+    border: none;
 }
 
 .placar p {
     margin: 0px 20px;
 }
 
-#vitoria-usuario, #vitoria-computador {
+#vitoria-jogador-um, #vitoria-jogador-dois {
+    font-size: 3rem;
     font-weight: bold;
-    font-style: 3rem;
+}
+
+/* CAMPO DE QUEM GANHOU */
+
+.vitorioso {
+    background-color: rgb(178, 215, 248);
+    max-width: 300px;
+    margin: 30px auto;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 24px;
+    color: #fff;
+    display: none;
+}
+
+/* MOBILE */
+
+@media (max-width: 530px) {
+    .jogador-dois, .jogador-um {
+        font-size: 1rem;
+    }
+
+    #vitoria-jogador-um, #vitoria-jogador-dois {
+        font-size: 2rem;
+    }
+
+    .items {
+        font-size: 140px;
+        height: 150px;
+    }
+
+    .placar p {
+        margin: 0px 10px;
+    }
+
+}
+
+@media (max-width: 415px) {
+    .jogador-dois, .jogador-um {
+        font-size: 14px;
+    }
+
+    #vitoria-jogador-um, #vitoria-jogador-dois {
+        font-size: 2rem;
+    }
+
+    .items {
+        font-size: 100px;
+        height: 120px;
+    }
+
 }
